[gd_scene load_steps=10 format=3 uid="uid://c6rstg42mhyll"]

[ext_resource type="Script" path="res://entities/enemies/space-mine/weiner.gd" id="1_1v24d"]
[ext_resource type="Texture2D" uid="uid://beercpwrql1p7" path="res://entities/enemies/space-mine/Enemies-4.png" id="2_47kmv"]
[ext_resource type="PackedScene" uid="uid://oyj1vdacrtxd" path="res://common/nodes/hp_node.tscn" id="2_47wjd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yadj"]
radius = 26.0192

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqd7e"]
size = Vector2(58, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7liog"]
size = Vector2(15, 59)

[sub_resource type="Animation" id="Animation_w4p1d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_eogm5"]
resource_name = "spin"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bscqx"]
_data = {
"RESET": SubResource("Animation_w4p1d"),
"spin": SubResource("Animation_eogm5")
}

[node name="Weiner" type="CharacterBody2D" groups=["Entities", "Weiners"]]
script = ExtResource("1_1v24d")

[node name="HP Node" parent="." instance=ExtResource("2_47wjd")]
HP = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6yadj")

[node name="Damage Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage Area"]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_wqd7e")
debug_color = Color(1, 0, 0, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Damage Area"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_7liog")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_47kmv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bscqx")
}
autoplay = "spin"
speed_scale = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="zero_hp" from="HP Node" to="." method="_on_zero_hp"]
[connection signal="body_entered" from="Damage Area" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
